# real_time_fraud_detection_system

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  desktop.spec  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
backend/: __init__.py  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py  schemas.py
backend/data_processing/: data_validator.py  feature_engineering.py  preprocessor.py
backend/db/: models.py
backend/migrations/: env.py
backend/migrations/versions/: b531bb528c7c_initial_migration.py
backend/ml_models/: feature_selection.py  hyperparameter_tuning.py  model_evaluation.py  model_training.py
backend/models/: random_forest_model.pkl  xgboost_model.pkl
backend/services/: alert_service.py  feature_extractor.py  fraud_detector.py  rule_engine.py  transaction_processor.py  websocket_manager.py
backend/utils/: config.py  database.py  helpers.py  redis_client.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MODEL_PERFORMANCE.md  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AlertNotification.jsx  Layout.jsx  MetricCard.jsx  MetricsChart.jsx  RiskScore.jsx  Sidebar.jsx  TransactionCard.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: AlertsPage.jsx  AnalyticsPage.jsx  DashboardPage.jsx  TransactionsPage.jsx
frontend/src/services/: fraud_api.js
ml_models/: model_training.py
server/: server.py
src/: main.py  mobile_app.py  test_main.py
src/wordle/: gui.py
tests/: conftest.py  test_api.py  test_browser_api_smoke.py  test_debug.py  test_feature_engineering.py  test_fraud_detector.py  test_integration.py  test_redis_integration.py  test_smoke.py
