[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-backend"
version = "0.1.0"
description = "Real-time Fraud Detection System - Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pydantic-extra-types==2.4.0",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis==5.0.1",
    "scikit-learn==1.3.2",
    "xgboost==2.0.3",
    "lightgbm==4.1.0",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "scipy==1.11.4",
    "mlflow==2.9.2",
    "optuna==3.4.0",
    "shap==0.43.0",
    "onnx==1.15.0",
    "onnxruntime==1.17.0",
    "skl2onnx==1.16.0",
    "category-encoders==2.6.3",
    "feature-engine==1.6.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "httpx==0.26.0",
    "pyyaml==6.0.1",
    "email-validator==2.1.0.post1",
    "structlog==24.1.0",
    "prometheus-client==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "faker==20.1.0",
    "ruff==0.1.15",
    "black==23.12.1",
    "mypy==1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "T20"]
ignore = ["E501", "B008"]
exclude = [".git", "__pycache__", ".venv", "dist", "build"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]